Table users {
  pk bigint [pk, increment]
  id varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(30) [not null, note: "ADMIN, USER"]
  name varchar(30) [not null]
  email varchar(255) [not null, unique]
  address varchar(255) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table items {
  pk bigint [pk, increment]
  name varchar(50) [not null]
  stock int [not null, default: 0, note: "stock >= 0"]
  price int [not null, default: 0, note: "price >= 0"]
  image_link text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table orders {
  pk bigint [pk, increment]
  user_pk bigint [not null]
  status varchar(100) [not null, note: "PENDING_PAYMENT, PAID, SHIPPING, SUCCESS, FAILED, CANCELED, EXPIRED"]
  recipient_name varchar(50) [not null]
  recipient_email varchar(255) [not null]
  shipping_address varchar(255) [not null]
  total_price int [not null, default: 0, note: "total_price >= 0"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table order_items {
  pk bigint [pk, increment]
  order_pk bigint [not null]
  item_pk bigint [not null]
  item_name varchar(50) [not null]
  item_price int [not null, default: 0, note: "item_price >= 0"]
  quantity int [not null, note: "quantity >= 1"]
  total_price int [not null, default: 0, note: "total_price >= 0"]
}

Table payments {
  pk bigint [pk, increment]
  order_pk bigint [not null]
  status varchar(50) [not null, note: "IN_PROGRESS, PAID, FAILED, EXPIRED"]
  method varchar(255) [not null]
  amount int [not null, default: 0, note: "amount >= 0"]
  payment_key varchar(255)
  paid_at timestamptz
  created_at timestamptz [default: `now()`]
}

Ref: orders.user_pk > users.pk
Ref: order_items.order_pk > orders.pk [delete: cascade]
Ref: order_items.item_pk > items.pk [delete: restrict]
Ref: payments.order_pk > orders.pk
